network_policy_generator/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-baza-podataka
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: intersection3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server2-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: baza-podataka
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-intersection3-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: baza-podataka
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server2-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: intersection3-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-intersection4-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: baza-podataka
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server2-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server5-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: intersection4-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-server-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: baza-podataka
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server2-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: server-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-server2-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: baza-podataka
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: server2-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-server3-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: baza-podataka
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection3-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: server-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: server3-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auto-deny-server5-app
  namespace: master-rad
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: intersection4-app
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cattle-monitoring-system
    ports:
    - endPort: 65535
      port: 1
      protocol: TCP
  podSelector:
    matchLabels:
      app: server5-app
  policyTypes:
  - Ingress
